# GoogleTestsAndCMake

./: CMakeLists.txt  Foo.cpp  Foo.hpp  README.md
UnitTests/: CMakeLists.txt  FooTests.cpp
